* 2007-07-19 - francisco.laguna@open-xchange.com

 - Fixed build.xml to also copy subdirectories of the configuration.

* 2007-07-19 - thorben.betten@open-xchange.com

 - Added mail folder clearing to mail servlet
 - Added invocation of FileItem.delete() on file upload to avoid double
   temporary files
 - Fastened reading of body content on PUT request in AJAXServlet.getBody()
 - Servlet mapping read from directory

* 2007-07-18 - thorben.betten@open-xchange.com

 - New design for custom IMAP commands
 - Moved imap-related packages to new package(s)
 - Bugfix #8472: Improved error message if a hidden subfolder is located
   underneath a folder that should be deleted
 - Bugfix #8498: Additional check when reading an infostore document's MIME
   type setting
 - Bugfix #8360: Removed senseless counter for working servlets in JMX's
   GeneralMonitor interface

* 2007-07-17 - francisco.laguna@open-xchange.com

 - Fix for bug #8478: Changed LogLevel.

* 2007-07-13 - tobias.prinz@open-xchange.com

 - Bugfix #7470: Fixed and tested after all.
 - Bugfix #8411: Applied Thorben's patch and wrote test for it.

* 2007-07-13 - francisco.laguna@open-xchange.com

 - Fix for bug #8392: Changed webdav servlet to expect ENCODED URIs. To ensure
   that they remain encoded the following option has to be set in the Apache configuration:
   JkOptions +ForwardURICompatUnparsed
   
############## PAY ATTENTION TO ME ! ################
 - CONFIG change: Option in apache configuration must be set:
JkOptions +ForwardURICompatUnparsed
#####################################################
   

* 2007-07-13 - thorben.betten@open-xchange.com

 - Slightly fastened AJP processing
 - Added file name extraction method to UploadEvent
 - Avoiding duplicate VCard attachment when saving draft message

* 2007-07-12 - tobias.prinz@open-xchange.com

 - Bugfix #7732: An RRULE's COUNT property is now set as occurrence value
   for a CalendarObject.

* 2007-07-12 - thorben.betten@open-xchange.com
